--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -1,1 +1,12 @@
-<h1>Hola mundo</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title>A basic webpage</title>
+</head>
+<body>
+	<h1>Hola</h1>
+</body>
+</html>
