--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -7,6 +7,22 @@
 	<title>A basic webpage</title>
 </head>
 <body>
-	<h1>Hola</h1>
+	<section>
+		<div class="">
+			<h1>Programación JJE</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<a href="#">Ver más</a>
+
+			<figure>
+				<img src="./public/images/2.jpg" alt="Apple">
+				<figcaption>El mejor lugar para aprender</figcaption>
+			</figure>
+		</div>
+	</section>
 </body>
 </html>
