--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<section>
-		<div class="grid">
+		<div class="grid-main-area">
 			<div class="main-text">
 				<h1>Programación JJE</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
