--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -8,23 +8,27 @@
 </head>
 <body>
 	<section>
-		<div class="grid-main-area">
-			<div class="main-text">
-				<h1>Programación JJE</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				<a href="#">Ver más</a>
-			</div>
-			
-			<div class="main-image">
-				<figure>
-					<img src="./public/images/3.jpg" alt="Apple">
-					<figcaption>El mejor lugar para aprender</figcaption>
-				</figure>
+		<div class="grid">
+			<div class="container">
+				<div class="grid-main-area">
+					<div class="main-text">
+						<h1>Programación JJE</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<a href="#">Ver más</a>
+					</div>
+					
+					<div class="main-image">
+						<figure>
+							<img src="./public/images/3.jpg" alt="Apple">
+							<figcaption>El mejor lugar para aprender</figcaption>
+						</figure>
+					</div>
+				</div>	
 			</div>
 		</div>
 	</section>
