--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -32,5 +32,13 @@
 			</div>
 		</div>
 	</section>
+	<section>
+		<div class="cover parallax">
+
+		</div>
+	</section>
+	<section style="min-height:1000vh;">
+
+	</section>
 </body>
 </html>
