--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -34,10 +34,13 @@
 	</section>
 	<section>
 		<div class="cover parallax">
-
+			<p>
+				Conviertete en un experto
+				<span>Somos tu mejor opción</span>
+			</p>
 		</div>
 	</section>
-	<section style="min-height:1000vh;">
+	<section style="min-height:100vh;">
 
 	</section>
 </body>
