--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -43,5 +43,20 @@
 	<section style="min-height:100vh;">
 
 	</section>
+	<section>
+		<div class="grid full-height mission">
+			<div class="container">
+				<h1>Nuestra Misión</h1>
+				<figure>
+					<img src="./public/images/5.jpg" alt="Programación JJE Misión" height="400">
+					<figcaption>
+						Lorem ipsum dolor
+					</figcaption>
+				</figure>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
