--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -58,5 +58,15 @@
 			</div>
 		</div>
 	</section>
+	<section>
+		<div class="grid social">
+			<div class="container">
+				<p class="title">Contacto</p>
+				<a href="" class="btn">Mail</a>
+				<a href="" class="btn">Facebook</a>
+				<a href="" class="btn">YouTube</a>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
