--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -44,6 +44,22 @@
 
 	</section>
 	<section>
+		<div class="grid-main-area slider">
+			<div class="text">
+				<header>
+					<p id="slider-subtitle">Cursos</p>
+					<h2 id="slider-title">Lorem ipsum</h2>
+					<p id="slider-text">
+						Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+					</p>
+				</header>
+			</div>
+			<div class="image">
+				<img id="slider-image" src="./public/images/6.jpg" alt="">
+			</div>
+		</div>
+	</section>
+	<section>
 		<div class="grid full-height mission">
 			<div class="container">
 				<h1>Nuestra Misión</h1>
