--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -47,11 +47,13 @@
 		<div class="grid-main-area slider">
 			<div class="text">
 				<header>
-					<p id="slider-subtitle" class="separator">Cursos</p>
-					<h2 id="slider-title">Lorem ipsum</h2>
-					<p id="slider-text">
-						Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-					</p>
+					<div id="slider-text-content">
+						<p id="slider-subtitle" class="separator">Cursos</p>
+						<h2 id="slider-title">Lorem ipsum</h2>
+						<p id="slider-text">
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+						</p>
+					</div>
 				</header>
 			</div>
 			<div class="image">
