Separación del array de elements.

--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -48,10 +48,10 @@
 			<div class="text">
 				<header>
 					<div id="slider-text-content">
-						<p id="slider-subtitle" class="separator">Cursos</p>
-						<h2 id="slider-title">Lorem ipsum</h2>
+						<p id="slider-subtitle" class="separator">Laravel</p>
+						<h2 id="slider-title">Laravel Básico</h2>
 						<p id="slider-text">
-							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+							Aprende a dominar el Framework Web #1 de PHP.
 						</p>
 					</div>
 				</header>
