--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -46,6 +46,10 @@
 	<section>
 		<div class="grid-main-area slider">
 			<div class="text">
+				<div class="controls">
+					<img src="./public/images/right-arrow.svg" alt="Flecha izquierda" class="left-arrow">
+					<img src="./public/images/right-arrow.svg" alt="Flecha derecha" class="right-arrow">
+				</div>
 				<header>
 					<div id="slider-text-content">
 						<p id="slider-subtitle" class="separator">Laravel</p>
@@ -86,5 +90,8 @@
 			</div>
 		</div>
 	</section>
+	<footer>
+		<div align="center">Icons made by <a href="https://www.flaticon.com/authors/lucy-g" title="Lucy G">Lucy G</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+	</footer>
 </body>
 </html>
