Agregamos mapa via javascript.

--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>A basic webpage</title>
+	<title>Programación JJE</title>
 </head>
 <body>
 	<section>
@@ -81,6 +81,11 @@
 		</div>
 	</section>
 	<section>
+		<div id="mapa">
+			
+		</div>
+	</section>
+	<section>
 		<div class="grid social">
 			<div class="container">
 				<p class="title">Contacto</p>
@@ -93,5 +98,9 @@
 	<footer>
 		<div align="center">Icons made by <a href="https://www.flaticon.com/authors/lucy-g" title="Lucy G">Lucy G</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 	</footer>
+
+	<script src="https://maps.google.com/maps/api/js?key=AIzaSyDZDpeu4ZoIL8GtfqUmryQZd7WWbroIF1Y">
+		
+	</script>
 </body>
 </html>
