Implementación del menu.

--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -7,7 +7,23 @@
 	<title>Programación JJE</title>
 </head>
 <body>
-	<section>
+	<div class="menu-screen">
+		<nav>
+			<a href="#home">
+				<span class="main">Home</span>
+			</a>
+			<a href="#courses">
+				<span class="main">Cursos</span>
+			</a>
+			<a href="#mission">
+				<span class="main">Misión</span>
+			</a>
+			<a href="#social">
+				<span class="main">Contactos</span>
+			</a>
+		</nav>
+	</div>
+	<section id="home">
 		<div class="grid">
 			<div class="container">
 				<div class="grid-main-area">
@@ -80,11 +96,7 @@
 			</div>
 		</div>
 	</section>
-	<section>
-		<div id="mapa">
-			
-		</div>
-	</section>
+	
 	<section>
 		<div class="grid social">
 			<div class="container">
@@ -98,9 +110,5 @@
 	<footer>
 		<div align="center">Icons made by <a href="https://www.flaticon.com/authors/lucy-g" title="Lucy G">Lucy G</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 	</footer>
-
-	<script src="https://maps.google.com/maps/api/js?key=AIzaSyDZDpeu4ZoIL8GtfqUmryQZd7WWbroIF1Y">
-		
-	</script>
 </body>
 </html>
