Se agrego el icono para abrir el menu.

--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -7,6 +7,9 @@
 	<title>Programación JJE</title>
 </head>
 <body>
+	<div class="menu">
+		<img src="/public/images/menu.svg" alt="">
+	</div>
 	<div class="menu-screen">
 		<nav>
 			<a href="#home">
