Se implemento la funcionalidad de abrir y cerrar el menu.

--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -11,6 +11,9 @@
 		<img src="/public/images/menu.svg" alt="">
 	</div>
 	<div class="menu-screen">
+		<a class="close">
+			<img src="./public/images/close.svg" alt="">
+		</a>
 		<nav>
 			<a href="#home">
 				<span class="main">Home</span>
