Trabajando en efectos del menu.

--- a/assets/index.template.html
+++ b/assets/index.template.html
@@ -65,7 +65,7 @@
 	<section style="min-height:100vh;">
 
 	</section>
-	<section>
+	<section id="courses">
 		<div class="grid-main-area slider">
 			<div class="text">
 				<div class="controls">
@@ -87,7 +87,7 @@
 			</div>
 		</div>
 	</section>
-	<section>
+	<section id="mission">
 		<div class="grid full-height mission">
 			<div class="container">
 				<h1>Nuestra Misión</h1>
@@ -103,7 +103,7 @@
 		</div>
 	</section>
 	
-	<section>
+	<section id="social">
 		<div class="grid social">
 			<div class="container">
 				<p class="title">Contacto</p>
@@ -113,8 +113,5 @@
 			</div>
 		</div>
 	</section>
-	<footer>
-		<div align="center">Icons made by <a href="https://www.flaticon.com/authors/lucy-g" title="Lucy G">Lucy G</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-	</footer>
 </body>
 </html>
